@@ -1,3 +1,8 @@
+2002-03-31  wakaba <w@suika.fam.cx>
+
+	* user-style-example.css (.x-f-style),
+	(.x-f-script, .x-f-no-elements): New classes.
+
 2002-03-30  wakaba <w@suika.fam.cx>
 
 	* ChangeLog: New file.
